--- a/index.html
+++ b/index.html
@@ -6,32 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monomaniac+One&display=swap" rel="stylesheet">
     <title>Calculator</title>
 </head>
 
 <div id="main">
     <div class="screen">
-        <div class="top screen"></div>
+        <p class="top"> </p>
+        <p class="down"> </p>
     </div>
     <div id="numbers-container">
-        <button>AC</button>
-        <button>DEL</button>
-        <button>/</button>
-        <button>x</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="grid-row-span">=</button>
+        <button class="clear">AC</button>
+        <button class="delete">⌫</button>
+        <button class="operator">÷</button>
+        <button class="operator">x</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator">-</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator">+</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="grid-row-span operator">=</button>
         <button class="grid-col-span">0</button>
-        <button>.</button>
+        <button class="number">.</button>
     </div>
 
     </div>
