Refactored button functions

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
     <div id="numbers-container">
         <button class="clear">AC</button>
         <button class="delete">⌫</button>
-        <button class="operator">÷</button>
-        <button class="operator">x</button>
+        <button id="divded" class="operator">÷</button>
+        <button id="multiply" class="operator">x</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="operator">-</button>
+        <button id="subtract" class="operator">-</button>
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="operator">+</button>
+        <button id="add" class="operator">+</button>
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="grid-row-span operator">=</button>
-        <button class="grid-col-span">0</button>
-        <button class="number">.</button>
+        <button id="equalto" class="grid-row-span equals">=</button>
+        <button class="grid-col-span number">0</button>
+        <button id="dot" class="number">.</button>
     </div>
 
     </div>
